# qmlcpptest

./: CMakeLists.txt  README.md  main.cpp  main.h  main.qml  resources.qrc
